# RAGSentinel

./: LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/agents/: graph.py  state.py
app/agents/nodes/: planner.py  responder.py  retriever.py
app/gateway/: __init__.py  client.py
app/guardrails/: __init__.py  rails.py
app/ingestion/: processor.py
app/ingestion/chunking/: splitter.py
app/ingestion/loaders/: html.py
app/services/retrieval/: embedding.py  qdrant_service.py  ranking_service.py
evals/: __init__.py  app.py  data_parser.py  guardrails_eval.py  metrics.py  pipeline.py
notebooks/: 01_guardrails.ipynb  02_llm_gateway.ipynb  02_llm_gateway_copy2.ipynb  03_evals.ipynb
tests/: test_health.py
ui/: app.py  st_cloud_ui.py
