[project]
name = "ragsentinel"
version = "1.0.0"
description = "RAGSentinel — Enterprise Agentic RAG pipeline with LangGraph, Gemini Embeddings, NeMo Guardrails, and Qdrant."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line-too-long — handled by formatter
    "E402",  # module-import-not-at-top — needed for env loading before imports
    "F401",  # unused-import — some re-exports are intentional
    "B008",  # do-not-perform-function-call-in-default-argument — FastAPI pattern
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "qdrant_client.*",
    "langchain.*",
    "langgraph.*",
    "portkey_ai.*",
    "nemoguardrails.*",
    "logfire.*",
    "loguru.*",
    "flashrank.*",
    "langfuse.*",
    "ragas.*",
    "deepeval.*",
    "pypdf.*",
    "pdfplumber.*",
    "bs4.*",
    "docx.*",
    "pptx.*",
    "unstructured.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
